--- a/package.json
+++ b/package.json
@@ -9,7 +9,10 @@
     "jquery": "^3.1.0",
     "mousetrap": "^1.6.0",
     "phoenix": "file:deps/phoenix",
-    "phoenix_html": "file:deps/phoenix_html"
+    "phoenix_html": "file:deps/phoenix_html",
+    "three": "^0.84.0",
+    "tween.js": "^16.6.0",
+    "vue": "^2.1.10"
   },
   "devDependencies": {
     "babel-brunch": "~6.0.0",
