--- a/package.json
+++ b/package.json
@@ -22,6 +22,7 @@
     "clean-css-brunch": "~2.0.0",
     "css-brunch": "~2.0.0",
     "javascript-brunch": "~2.0.0",
+    "modularscale-sass": "^2.1.1",
     "sass-brunch": "^2.10.2",
     "uglify-js-brunch": "~2.0.1"
   }
