--- a/package.json
+++ b/package.json
@@ -6,7 +6,8 @@
     "watch": "brunch watch --stdin"
   },
   "dependencies": {
-    "jquery": "^3.1.0",
+    "howler": "^2.0.2",
+    "jquery": "^3.1.1",
     "mousetrap": "^1.6.0",
     "phoenix": "file:deps/phoenix",
     "phoenix_html": "file:deps/phoenix_html",
