--- a/.deliver/config
+++ b/.deliver/config
@@ -14,8 +14,10 @@ DELIVER_TO="/web"
 # For *Phoenix* projects, symlink prod.secret.exs to our tmp source
 pre_erlang_get_and_update_deps() {
     local _prod_secret_path="/home/edeliver/prod.secret.exs"
+    local _prod_cookie_path="/home/edeliver/cookie"
     if [ "$TARGET_MIX_ENV" = "prod" ]; then
         __sync_remote "
+      ln -sfn '$_prod_cookie_path' '$BUILD_AT/config/cookie'
       ln -sfn '$_prod_secret_path' '$BUILD_AT/config/prod.secret.exs'
     "
     fi
