--- a/assets/package.json
+++ b/assets/package.json
@@ -2,29 +2,38 @@
   "repository": {},
   "license": "MIT",
   "scripts": {
-    "deploy": "brunch build --production",
-    "watch": "brunch watch --stdin"
+    "deploy": "webpack -p --verbose",
+    "watch": "webpack watch --stdin --verbose --colors",
+    "build": "webpack --verbose"
   },
   "dependencies": {
+    "css-loader": "^0.28.4",
     "howler": "^2.0.2",
     "jquery": "^3.1.1",
     "mousetrap": "^1.6.0",
+    "node-sass": "^4.5.3",
     "phoenix": "file:../deps/phoenix",
     "phoenix_html": "file:../deps/phoenix_html",
+    "prettier": "^1.5.3",
+    "sass-loader": "^6.0.6",
+    "style-loader": "^0.18.2",
     "three": "^0.84.0",
     "tween.js": "^16.6.0",
     "vue": "^2.1.10"
   },
   "devDependencies": {
-    "babel-brunch": "~6.0.0",
+    "awesome-typescript-loader": "^3.2.2",
+    "babel-core": "^6.25.0",
+    "babel-loader": "^7.1.1",
+    "babel-preset-env": "^1.6.0",
     "babel-preset-es2015": "^6.9.0",
     "babel-preset-es2016": "^6.11.3",
-    "brunch": "2.10",
-    "clean-css-brunch": "~2.0.0",
-    "css-brunch": "~2.0.0",
-    "javascript-brunch": "~2.0.0",
+    "eslint-config-standard": "^10.2.1",
+    "eslint-plugin-promise": "^3.5.0",
+    "eslint-plugin-standard": "^3.0.1",
     "modularscale-sass": "^2.1.1",
-    "sass-brunch": "^2.10.2",
-    "uglify-js-brunch": "~2.0.1"
+    "typescript": "^2.4.2",
+    "webpack": "^3.4.1",
+    "webpack-dev-server": "^2.6.1"
   }
 }
