--- a/assets/package.json
+++ b/assets/package.json
@@ -3,23 +3,18 @@
   "license": "MIT",
   "scripts": {
     "deploy": "webpack -p --verbose",
-    "watch": "webpack watch --stdin --verbose --colors",
+    "watch": "nodemon --watch webpack.config.js ./node_modules/.bin/webpack --watch --stdin --verbose --colors",
     "build": "webpack --verbose"
   },
   "dependencies": {
-    "css-loader": "^0.28.4",
-    "howler": "^2.0.2",
     "jquery": "^3.1.1",
     "mousetrap": "^1.6.0",
-    "node-sass": "^4.5.3",
     "phoenix": "file:../deps/phoenix",
     "phoenix_html": "file:../deps/phoenix_html",
-    "prettier": "^1.5.3",
-    "sass-loader": "^6.0.6",
-    "style-loader": "^0.18.2",
     "three": "^0.84.0",
     "tween.js": "^16.6.0",
-    "vue": "^2.1.10"
+    "vue": "^2.1.10",
+    "yarn": "^0.27.5"
   },
   "devDependencies": {
     "awesome-typescript-loader": "^3.2.2",
@@ -28,10 +23,17 @@
     "babel-preset-env": "^1.6.0",
     "babel-preset-es2015": "^6.9.0",
     "babel-preset-es2016": "^6.11.3",
+    "css-loader": "^0.28.4",
     "eslint-config-standard": "^10.2.1",
     "eslint-plugin-promise": "^3.5.0",
     "eslint-plugin-standard": "^3.0.1",
+    "howler": "^2.0.2",
     "modularscale-sass": "^2.1.1",
+    "node-sass": "^4.5.3",
+    "nodemon": "^1.11.0",
+    "prettier": "^1.5.3",
+    "sass-loader": "^6.0.6",
+    "style-loader": "^0.18.2",
     "typescript": "^2.4.2",
     "webpack": "^3.4.1",
     "webpack-dev-server": "^2.6.1"
