ignore typescript cache

--- a/.gitignore
+++ b/.gitignore
@@ -9,12 +9,12 @@
 /config/prod.secret.exs
 /db
 /deps
-/priv/static/
+/priv/static
 Mnesia.*
 TODOs.org
 TODOs.org_archive
-assets/.awcache
 assets/.sass-cache
 assets/node_modules
 databases/
 erl_crash.dump
+assets/.awcache
