Rende Game board through canvas
Looks like shit! But sorta works.

--- a/assets/tsconfig.json
+++ b/assets/tsconfig.json
@@ -4,8 +4,7 @@
     "module": "ESNext",
     "lib": [
       "dom",
-      "esnext",
-      "node"
+      "esnext"
     ],
     "allowJs": true,
     "checkJs": true,
