--- a/assets/package.json
+++ b/assets/package.json
@@ -8,6 +8,8 @@
   },
   "dependencies": {
     "copy-webpack-plugin": "^4.0.1",
+    "eslint": "^4.4.1",
+    "eslint-import-resolver-webpack": "^0.8.3",
     "jquery": "^3.1.1",
     "mousetrap": "^1.6.0",
     "phoenix": "file:../deps/phoenix",
@@ -29,7 +31,9 @@
     "babel-preset-es2015": "^6.9.0",
     "babel-preset-es2016": "^6.11.3",
     "css-loader": "^0.28.4",
+    "eslint-config-airbnb-base": "^11.3.1",
     "eslint-config-standard": "^10.2.1",
+    "eslint-plugin-import": "^2.7.0",
     "eslint-plugin-promise": "^3.5.0",
     "eslint-plugin-standard": "^3.0.1",
     "howler": "^2.0.2",
