Handle game app mounting with elm
big ol' shitty commit.

Makes the app managed by elm. Yet another fraken-creation of mine: the
app is launched with an embeded elm app, elm handles all IO, sockets,
dom manipulation and view updates. The Elm app creates the canvas
elements, and calls a port to some imperative typescript code which
handles all the canvas rendering.

--- a/.gitignore
+++ b/.gitignore
@@ -15,6 +15,7 @@ TODOs.org
 TODOs.org_archive
 assets/.sass-cache
 assets/node_modules
+assets/elm/elm-stuff
 databases/
 erl_crash.dump
 assets/.awcache
