--- a/assets/package.json
+++ b/assets/package.json
@@ -8,6 +8,9 @@
   },
   "dependencies": {
     "copy-webpack-plugin": "^4.0.1",
+    "elm": "^0.18.0",
+    "elm-oracle": "^1.1.1",
+    "elm-webpack-loader": "^4.3.1",
     "eslint": "^4.4.1",
     "eslint-import-resolver-webpack": "^0.8.3",
     "jquery": "^3.1.1",
@@ -43,6 +46,7 @@
     "prettier": "^1.5.3",
     "sass-loader": "^6.0.6",
     "style-loader": "^0.18.2",
+    "stylelint-config-recommended": "^1.0.0",
     "ts-node": "^3.3.0",
     "typescript": "^2.4.2",
     "webpack": "^3.4.1",
