--- a/assets/package.json
+++ b/assets/package.json
@@ -25,10 +25,11 @@
     "yarn": "^0.27.5"
   },
   "devDependencies": {
+    "@types/copy-webpack-plugin": "^4.0.1",
     "@types/jquery": "^3.2.11",
     "@types/mousetrap": "^1.5.34",
     "@types/phoenix": "^0.0.4",
-    "@types/webpack": "^3.0.5",
+    "@types/webpack": "^3.0.11",
     "autoprefixer": "^7.1.3",
     "awesome-typescript-loader": "^3.2.2",
     "babel-core": "^6.25.0",
