--- a/assets/package.json
+++ b/assets/package.json
@@ -1,33 +1,10 @@
 {
-  "repository": {},
-  "license": "MIT",
-  "scripts": {
-    "deploy": "webpack -p --verbose",
-    "watch": "nodemon --watch webpack.config.js ./node_modules/.bin/webpack --watch --stdin --verbose --colors",
-    "build": "webpack --verbose"
-  },
   "dependencies": {
-    "copy-webpack-plugin": "^4.0.1",
-    "elm": "^0.18.0",
-    "elm-oracle": "^1.1.1",
-    "elm-webpack-loader": "^4.3.1",
-    "eslint": "^4.4.1",
-    "eslint-import-resolver-webpack": "^0.8.3",
-    "global": "^4.3.2",
-    "jquery": "^3.1.1",
-    "mousetrap": "^1.6.0",
     "phoenix": "file:../deps/phoenix",
-    "phoenix_html": "file:../deps/phoenix_html",
-    "prettier_d": "^5.7.3",
-    "three": "^0.84.0",
-    "tween.js": "^16.6.0",
-    "vue": "^2.1.10",
-    "yarn": "^0.27.5"
+    "phoenix_html": "file:../deps/phoenix_html"
   },
   "devDependencies": {
     "@types/copy-webpack-plugin": "^4.0.1",
-    "@types/jquery": "^3.2.11",
-    "@types/mousetrap": "^1.5.34",
     "@types/phoenix": "^0.0.4",
     "@types/webpack": "^3.0.11",
     "autoprefixer": "^7.1.3",
@@ -37,9 +14,15 @@
     "babel-preset-env": "^1.6.0",
     "babel-preset-es2015": "^6.9.0",
     "babel-preset-es2016": "^6.11.3",
+    "copy-webpack-plugin": "^4.0.1",
     "css-loader": "^0.28.4",
+    "elm": "^0.18.0",
+    "elm-oracle": "^1.1.1",
+    "elm-webpack-loader": "^4.3.1",
+    "eslint": "^4.7.2",
     "eslint-config-airbnb-base": "^11.3.1",
     "eslint-config-standard": "^10.2.1",
+    "eslint-import-resolver-webpack": "^0.8.3",
     "eslint-plugin-import": "^2.7.0",
     "eslint-plugin-promise": "^3.5.0",
     "eslint-plugin-standard": "^3.0.1",
@@ -51,12 +34,21 @@
     "postcss-lh": "^1.1.4",
     "postcss-loader": "^2.0.6",
     "prettier": "^1.5.3",
+    "prettier_d": "^5.7.3",
     "sass-loader": "^6.0.6",
     "style-loader": "^0.18.2",
     "stylelint-config-recommended": "^1.0.0",
     "ts-node": "^3.3.0",
     "typescript": "^2.4.2",
     "webpack": "^3.4.1",
-    "webpack-dev-server": "^2.6.1"
+    "webpack-dev-server": "^2.6.1",
+    "yarn": "^1.1.0"
+  },
+  "license": "MIT",
+  "repository": {},
+  "scripts": {
+    "build": "webpack --verbose",
+    "deploy": "webpack -p --verbose",
+    "watch": "nodemon --watch webpack.config.js ./node_modules/.bin/webpack --watch --stdin --verbose --colors"
   }
 }
