--- a/assets/package.json
+++ b/assets/package.json
@@ -1,16 +1,19 @@
 {
   "dependencies": {
+    "bluebird": "^3.5.1",
     "phoenix": "file:../deps/phoenix",
     "phoenix_html": "file:../deps/phoenix_html"
   },
   "devDependencies": {
+    "@babel/core": "^7.0.0-beta.31",
+    "@babel/preset-env": "^7.0.0-beta.31",
     "@types/copy-webpack-plugin": "^4.0.1",
     "@types/phoenix": "^0.0.4",
     "@types/webpack": "^3.0.11",
     "autoprefixer": "^7.1.3",
     "awesome-typescript-loader": "^3.2.2",
     "babel-core": "^6.25.0",
-    "babel-loader": "^7.1.1",
+    "babel-loader": "8.0.0-beta.0",
     "babel-preset-env": "^1.6.0",
     "babel-preset-es2015": "^6.9.0",
     "babel-preset-es2016": "^6.11.3",
@@ -41,6 +44,7 @@
     "ts-node": "^3.3.0",
     "typescript": "^2.4.2",
     "webpack": "^3.4.1",
+    "webpack-bundle-analyzer": "^2.9.1",
     "webpack-dev-server": "^2.6.1",
     "yarn": "^1.1.0"
   },
