Add basic docker file

--- a/.dockerignore
+++ b/.dockerignore
@@ -5,14 +5,12 @@
 .iex.exs
 /*.ez
 /_build
+/assets/node_modules
 /config/prod.secret.exs
-/db
 /deps
 /node_modules
 /priv/static/
-Mnesia.*
-TODOs.org
-TODOs.org_archive
-databases/
+cover
+doc
 erl_crash.dump
-.deliver/releases
+tmp
