--- a/package.json
+++ b/package.json
@@ -8,10 +8,11 @@
   "name": "battle_snake",
   "repository": "git@github.com:Dkendal/battle_snake.git",
   "scripts": {
-    "cypress": "cypress open",
+    "cypress:open": "cypress open",
     "cypress:run": "cypress run",
-    "reactor": "cd ./assets/elm && ../node_modules/elm/binwrappers/elm-reactor",
-    "server": "PORT=5678 mix phx.server"
+    "install": "cd ./assets && yarn",
+    "webpack": "cd ./assets && yarn webpack",
+    "webpack:production": "NODE_ENV=production yarn webpack"
   },
   "version": "1.0.0"
 }
