Update dockerfile + docs
Update the docker image to properly build, and update api docs in the
readme + install instructions.

--- a/.dockerignore
+++ b/.dockerignore
@@ -1,16 +1,37 @@
 *.DCD
 *.DCL
 *.LOG
+*.ez
+*.log
+.circleci
+.dockerignore
 .env
+.git
 .iex.exs
-/*.ez
-/_build
-/assets/node_modules
-/config/prod.secret.exs
-/deps
-/node_modules
-/priv/static/
+Dockerfile
+Dockerfile.*
+Mnesia.*
+README.md
+TODOs.org
+TODOs.org_archive
+_build
+assets/.awcache
+assets/.sass-cache
+assets/elm/elm-stuff
+assets/node_modules
+config/prod.secret.exs
 cover
+cover/
+cypress
+cypress.json
+databases/
+db
+deps
 doc
+docs
 erl_crash.dump
+node_modules
+priv/data/mnesia
+priv/static/
 tmp
+xref_graph.*
